# LocalAgent

./: .gitignore  README.md  TECHNICAL_OVERVIEW.md  build.sh  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/localagent/: MainActivityTest.kt
app/src/androidTest/java/com/localagent/data/: ChatRepositoryAndroidTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hermes-manifest.json
app/src/main/assets/editor/: index.html
app/src/main/assets/skills/: git_manager.md  termux_files.md  termux_shell.md
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  pty_jni.cpp  pty_session.cpp  pty_session.h
app/src/main/java/com/localagent/: LocalAgentApp.kt  MainActivity.kt
app/src/main/java/com/localagent/auth/: CredentialVault.kt  HermesEnvWriter.kt  OAuthCoordinator.kt  OpenAiRoutingStore.kt  ProviderCatalog.kt
app/src/main/java/com/localagent/bridge/: BridgeDiagEvent.kt  BridgeModels.kt  BridgeSocketServer.kt  BridgeWireAuth.kt  ChatModels.kt
app/src/main/java/com/localagent/data/: ChatRepository.kt  Daos.kt  Entities.kt  LocalAgentDatabase.kt
app/src/main/java/com/localagent/di/: AppContainer.kt
app/src/main/java/com/localagent/llm/: ChatPromptFormatter.kt  LlamaGpuLayers.kt  LlamaNative.kt  LocalLlmService.kt  ModelDownloadManager.kt  OpenAiCompatibleServer.kt  (+1 more)
app/src/main/res/drawable/: ic_local_agent.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
docs/: CONTRIBUTING.md  README.md
gradle/: libs.versions.toml
(+31 files in other folders)
